--- a/Tendr.css
+++ b/Tendr.css
@@ -1,4 +1,4 @@
-* { margin: 0; 
+ * { margin: 0; 
   padding: 0; 
   box-sizing:border-box; 
 }
@@ -821,7 +821,7 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 }
 
 .img-right {
-  top:20;
+  top:22%;
   width: 60px;
   height: 60px;
 }
