--- a/Tendr.css
+++ b/Tendr.css
@@ -801,7 +801,7 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 @media (width <= 480px) {
   .main-nav {
     font-size: 0.7rem;
-    min-height: fit-content;
+    max-height: fit-content;
     }
   .site-footer{
     font-size: 1rem;
@@ -822,7 +822,7 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 }
 
 .img-right {
-  top:30%;
+  top:40%;
   width: 60px;
   height: 60px;
 }
