--- a/Tendr.css
+++ b/Tendr.css
@@ -802,7 +802,8 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 
 @media (width <= 480px) {
   .main-nav {
-    font-size: 0.7rem;
+    font-size: 0.65rem;
+    max-height: min-content;
     }
   .site-footer{
     font-size: 1rem;
