--- a/Tendr.css
+++ b/Tendr.css
@@ -802,7 +802,7 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 
 @media (width <= 480px) {
   .main-nav {
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     }
   .logo-icon{
     width: 90px;
@@ -831,7 +831,10 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
   width: 60px;
   height: 60px;
 }
-  .story-pic img {
+.story-title{
+  padding-top: 1rem ;
+}
+  .story-pic {
     max-width: 110%;
   }
 .story-side-text h2{
@@ -842,7 +845,7 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 }
   
 
-  .footer-logo .logo .logo-icon {
+.footer-logo .logo .logo-icon {
       max-width: 250px;
       height: 40px;
     }
