--- a/Tendr.css
+++ b/Tendr.css
@@ -710,6 +710,11 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 
 /* Responsive */
 @media (width <= 768px) {
+    *{
+    margin-left: 5px;
+    margin-right: 5px;
+    
+  }
   .hero-title {
     font-size: 2rem;
   }
@@ -766,6 +771,10 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
   .our-solution .solution-title{
     font-size: 0.75rem;
   }
+  .our-solution .solution-span{
+    margin-bottom: 8px;
+  }
+  
 
  .our-solution h2 {
     font-size: 2rem;
@@ -790,7 +799,7 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
     }
 
   .main-nav {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
   }
 
  .founder-story .story-title{
@@ -801,11 +810,10 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 
 
 @media (width <= 480px) {
+
+
   .main-nav {
-    font-size: 0.6rem;
-    }
-    .main-nav ul {
-      gap: 0.75rem;
+    font-size: 0.7rem;
     }
   .logo-icon{
     width: 90px;
@@ -849,7 +857,7 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
   
 
 .footer-logo .logo .logo-icon {
-      max-width: 250px;
+      max-width: 300px;
       height: 40px;
     }
 
