--- a/Tendr.css
+++ b/Tendr.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background-color: #fff; /* or any background */
+  background-color: #fff; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,7 +19,7 @@
 /* Loader animation (spinner) */
 .loader {
   border: 6px solid #f3f3f3;
-  border-top: 6px solid #ff3b30; /* Your brand red */
+  border-top: 6px solid #ff3b30; 
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -34,11 +34,16 @@
 
 
     body {
-      font-family: Poppins, sans-serif;
+      font-family: Poppins;
+      font-weight: 600;
       background-color: #fff;
       color: #1a1a1a;
       line-height: 1.6;
     }
+    h1, h2, h3, h4, h5, h6, strong {
+  font-weight: 700;
+}
+
 
     .container {
       width: 100%;
