--- a/Tendr.css
+++ b/Tendr.css
@@ -859,7 +859,8 @@ background: linear-gradient(to right, #ff3b30, #ffc1c1);
 
   .main-nav {
     font-size: 0.6rem;
-    min-height: 55px;
+    min-height: 57px;
+    font-weight: bolder;
   }
   .main-nav ul {
     gap: 0.6rem;
